[tool.poetry]
name = "grafonix"
version = "0.1.0"
description = "Grafana SONIX integration service"
authors = ["SONIX Developers"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.1.1"
requests = "^2.32.3"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grafonix = "grafonix:main"

[tool.pytest.ini_options]
pythonpath = ["."]
