[tool.poetry]
name = "grafonix"
version = "0.1.0"
description = "Grafana SONIX integration service"
authors = ["SONIX Developers"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.1.1"
requests = "^2.32.3"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grafonix = "grafonix:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_mock.*"
ignore_missing_imports = true
